# ume

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README.md  ume.desktop  ume.pod
po/: CMakeLists.txt  POTFILES.in  ca.po  cs.po  de.po  en_GB.po  es.po  fr.po  he.po  hr.po  hu.po  it.po  ja.po  ko.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  uk.po  zh_CN.po
src/: config.h  defaults.h  ume.cpp
